auth işlemleri tamamlandı: register ve login eklendi

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://erdemabaci:malatya45@clusterhsp.p1jxj9w.mongodb.net/?retryWrites=true&w=majority&appName=ClusterHSP
+JWT_SECRET=myVerySecretKey123!@#
