--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "axios": "^1.9.0",
     "mongodb": "^6.16.0",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "react-datepicker": "^8.3.0",
+    "react-router-dom": "^5.3.0"
   }
 }
