--- a/hali-saha-frontend/package.json
+++ b/hali-saha-frontend/package.json
@@ -11,9 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "framer-motion": "^12.16.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-datepicker": "^8.4.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.1",
